mobile view fix

--- a/data/de/partner_obeki.yml
+++ b/data/de/partner_obeki.yml
@@ -5,7 +5,7 @@ subtitle: Zuverlässige Lieferanten auf die Sie zählen können
 url: http://www.obeki.com
 logo: images/portfolio/portfolio-obeki.jpg
 location: Anschrift
-description: Obeki German Text
+description: Obeki hat 1950 mit dem Motorenbau für lokale Kranhersteller begonnen. Heute sind Obeki Motoren auf allen Kontinenten vertreten.  Für allle Anwendungen und Umgebungen; sei es Nuklearindustrie, Stahlwerke, Bergbau , Transport oder Marine.  Die letzten Entwicklungen beinhalten beispielsweise Bremsen, Belüftung und Lineartechnik. Obeki entwickelt ihren Motor exakt nach ihren Anwendungen.
 address: C/ Baratzondo, 3
 address2: Pol. Ind. Apatta-Erreka
 city:  20400 Ibarra, Spain
