--- a/data/de/clients.yml
+++ b/data/de/clients.yml
@@ -4,8 +4,8 @@ description: >
   Das Mac Precision Team unterstützt ihr Unternehmen bei:
 image     : images/about/about-3.jpg
 servicelist:
-  - name    : Problemösung
-  - name    : Enticklung effektiver Produkte
+  - name    : Problemlösung
+  - name    : Entwicklung effektiver Produkte
   - name    : Reduktion der Betriebslautstärke
   - name    : Durchsetzung besserer Lieferzeiten
   - name    : Längerer Lebensdauer der Produkte
