--- a/data/de/partner_tdg.yml
+++ b/data/de/partner_tdg.yml
@@ -11,7 +11,7 @@ address2: 48300 Gernika (Bizkaia)
 city:   Spain
 phone: Telefon
 number1: +34 94 625 05 00
-number2: 
+number2: +34 94 625 53 51
 contact: tdg@tdgcompany.com
 
 
