--- a/data/en/portfolio.yml
+++ b/data/en/portfolio.yml
@@ -1,7 +1,7 @@
 enable  : true
-topTitle: RECENT WORK
-title   : WORK SHOWCASE.
-subtitle: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum reiciendis quasi itaque, obcaecati atque sit!
+topTitle: GET TO KNOW
+title   : OUR PARTNERS.
+subtitle: Reliable suppliers you can count on.
 
 filtermenu :
   - name      : Photography
