--- a/data/de/portfolio.yml
+++ b/data/de/portfolio.yml
@@ -1,5 +1,5 @@
 enable  : true
-topTitle: ENTDECKEN SIE UNSERE
+topTitle: ENTDECKEN SIE
 title   : UNSERE PARTNER.
-subtitle: Zuverlässige Lieferanten auf die Sie zählen können
+subtitle: Zuverlässige Lieferanten auf die Sie zählen können.
 
