--- a/data/de/about.yml
+++ b/data/de/about.yml
@@ -4,7 +4,7 @@ item    :
     image : images/about/about-1.jpg
     title : Tradition und Expertise
     description : >
-      Unsere Lieferanten befinden sich in Nordspanien, Katalonien, aber hauptsächlich im Baskenland.  Hier gibt es eine starke Tradition, einen besonderen Bezug zu seiner Arbeit und Firma zu haben. Diese Begeisterung zum eigenen Produkt, gepaart mit Flexibilität und Verläßlichkeit ist die besondere Stärke dieser Firmen. 
+      Unsere Lieferanten befinden sich in Nordspanien, sowohl in Katalonien als auch im Baskenland.  In diesen Regionen gehört es zur Tradition, einen besonderen Stolz für die eigene Arbeit und das Unternehmen zu besitzen. Heute macht diese Begeisterung zum eigenen Produkt, gepaart mit Flexibilität und Verlässlichkeit die besondere Stärke dieser Firmen aus und erhöht ihre Wettbewerbsfähigkeit für den deutschen Markt. 
 
 
   - positionRight : true
