partner page bg

--- a/config.toml
+++ b/config.toml
@@ -47,7 +47,7 @@ logo = "images/logo.png"
 phone = "images/phone.png"
 menufixed = true
 
-footerDescription = "Seit 2012 erkennt, prüft und stellt Mac Precision Qualitätslieferanten seinen Kunden vor."
+footerDescription = "Seit 2012 erkennt, prüft und stellt Mac Precision seinen Kunden Qualitätslieferanten vor."
 footerServiceTitle = "Leistungen"
 footerQuicklinkTitle = "Nützliche Links"
 footerAboutTitle = "Über uns"
