--- a/data/de/partner_eisenor.yml
+++ b/data/de/partner_eisenor.yml
@@ -5,7 +5,7 @@ subtitle: Zuverlässige Lieferanten auf die Sie zählen können
 url: http://www.eisenor.com
 logo: images/portfolio/portfolio-tedisa1.jpg
 location: Anschrift
-description: Hersteller von Linearführungen, Kastenführungen von hoher Steifigkeit, teilweise INA-kompatibel.  Für den Einsatz in Werkzeugmaschinen, im Werkzeugbau, bei der Automatisierung, bei der Lagertechnik, im Engineering. Weitere Produkte sind Rollenlager zu den Führungen und verschleißfeste Beschichtungen, thermisch-chemisch oderkeramisch. Spezialist in Sonderlösungen wie Bogenführungen.
+description: Eisenor ist ein Hersteller von Linearführungen, Kastenführungen von hoher Steifigkeit, die teilweise INA-kompatibel sind.  Für den Einsatz in Werkzeugmaschinen, im Werkzeugbau, bei der Automatisierung, bei der Lagertechnik, im Engineering. Weitere Produkte sind Rollenlager zu den Führungen und verschleißfeste Beschichtungen, für thermische, chemische oder keramische Prozesse. Sie sind ebenfalls spezialisiert auf Sonderlösungen wie  beispielsweise Bogenführungen.
 address: Polígono Industrial Mocholi
 address2: 31110 – Noain (Navarra)
 city: España - E.U.
