--- a/data/de/partner_spiroide.yml
+++ b/data/de/partner_spiroide.yml
@@ -5,7 +5,7 @@ subtitle: Zuverlässige Lieferanten auf die Sie zählen können
 logo: images/portfolio/portfolio-tdg.jpg
 url: https://spiroide.com/
 location: Anschrift
-description: Spiroide als familiengeführtes Unternehmen in dritter Generation fertigt geschliffene und gehöhnte Kegelradsätze. Es wird hauptsächlich nach Klingelnberg Norm auf ebensolchen Maschinen gefertigt, aber auch einige Gleason Anwendungen.  Hauptmärkte sind Bahntechnik, Marine, Werkzeugmaschinen, Bergbau und Getriebebau.
+description: Spiroide als familiengeführtes Unternehmen in dritter Generation fertigt geschliffene Kegelradsätze. Es wird hauptsächlich nach Klingelnberg Norm auf ebensolchen Maschinen gefertigt, aber auch einige Gleason Anwendungen sind möglich.  Ihre Hauptabsatzmärkte sind in der Bahntechnik, bei der Marine, bei Werkzeugmaschinen, im Bergbau und im Getriebebau zu finden.
 address: Els Vinyats I, nau nº 3
 address2: 08250 · Sant Joan de Vilatorrada
 city:   Barcelona (Spain)
