--- a/data/en/partner_spiroide.yml
+++ b/data/en/partner_spiroide.yml
@@ -5,7 +5,7 @@ subtitle: Reliable suppliers for almost every use case.
 logo: images/portfolio/portfolio-tdg.jpg
 url: https://spiroide.com/
 location: Address
-description: Spiroide is a family run business in its third generation producing ground and lapped spiral bevel gears. They manufacturer using primarily the Klingelnberg method, but can also provide some Gleason solutions. Their major markets are railway, marine, machine tool, mining, and gear boxes.
+description: Spiroide is a family run business in its third generation producing ground and lapped spiral bevel gears. They manufacture using primarily the Klingelnberg method, but can also provide some Gleason solutions. Their major markets are railway, marine, machine tool, mining, and gear boxes. 
 address: Els Vinyats I, nau nº 3
 address2: 08250 · Sant Joan de Vilatorrada
 city:   Barcelona (Spain)
