--- a/data/en/partner_tedisa.yml
+++ b/data/en/partner_tedisa.yml
@@ -4,7 +4,7 @@ title   : OUR PARTNERS.
 subtitle: Reliable suppliers for almost every use case.
 url: http://www.tedisa-hirth.com/
 location: Address
-description: Tedisa produces Hirth rings and Hirth teeth according to customer requirements. The specialist providing a high-quality product. They can make parts up to 1500 mm in diameter. Standard sizes are available for quick delivery and custom production is their norm with highest precision.
+description: Tedisa produces Hirth rings and Hirth teeth according to customer requirements. They specialize in providing a high-quality product. They can make parts up to 1500 mm in diameter. Standard sizes are available for quick delivery and custom production is their norm with highest precision.
 address: Pol. Ind. Eitua, 56 
 address2: E48240 Berriz
 city: Bizkaia, Spain
