--- a/data/de/partner_oz.yml
+++ b/data/de/partner_oz.yml
@@ -5,7 +5,7 @@ subtitle: Zuverlässige Lieferanten auf die Sie zählen können
 url: https://www.ondozabal.com/
 logo: images/portfolio/portfolio-obeki.jpg
 location: Anschrift
-description: Ondozabal ist auch ein familiengeführtes Unternehmen. An drei Fertigungsstandorten wird mechanisch bearbeitet, geschweißt und kaltumgeformt.  Es können Teile bis 50 Tonne und bis 5 Meter Länge bearbeitet werden. Es wird gedreht bis 2 Meter Durchmesser.  Die Präzision und Toleranzen sind von der Art und Design der Teile und von den verwandten Bearbeitungsmaschinen abhängig. Auf Leifeld Maschinen wird kaltumgeformt. Feuerfeste Rohre und andere Spezialteile.
+description: Ondozabal ist ein familiengeführtes Unternehmen, das an drei Fertigungsstandorten mechanisch arbeitet, schweißt und kaltumformt. Sie  können Teile bis 50 Tonnen und bis 5 Meter Länge bearbeiten. Teile bis 2 Meter Durchmesser können präzise gedreht werden.  Die Präzision und Toleranzen sind von der Art und Geometrie der Teile und von den verwandten Bearbeitungsmaschinen abhängig. Auf Leifeld Maschinen können feuerfeste Rohre und andere Spezialteile kaltumgeformt werden.
 address: Polígono Industrial Ubegun, 8
 address2: 20810 Aia  
 city: Orio (Gipuzkoa-SPAIN)
