--- a/data/de/partner_tdg.yml
+++ b/data/de/partner_tdg.yml
@@ -5,7 +5,7 @@ subtitle: Zuverlässige Lieferanten auf die Sie zählen können
 logo: images/portfolio/portfolio-tdg.jpg
 url: https://tdgcompany.com/
 location: Anschrift
-description: TDG stellt Spannfutter und Planscheiben nach Kundenwunsch her. Die Firma hat mehr als 100 Jahre Erfahrung im Maschinenbau und ist Spezialist bei mittleren und großen Drehfuttern; manuell wie automatisch und smart. Bis 7 Meter Durchmesser werden kundenspezifische Lösungen angeboten für den Energiesektor, Bahntechnik, Schiffbau, Luft- und Raumfahrt.
+description: TDG stellt Spannfutter und Planscheiben nach individuellen Kundenanforderungen her. Die Firma hat mehr als 100 Jahre Erfahrung im Maschinenbau und ist Spezialist bei mittleren und großen Drehfuttern, sowohl manuell als auch  automatisch. Seit kurzem haben sie auch die Smart Controls eingeführt. Bis 7 Meter Durchmesser werden kundenspezifische Lösungen angeboten für den Energiesektor, die Bahntechnik, den Schiffsbau und den Luft- und Raumfahrtsektor.
 address: Goikoibarra 3
 address2: 48300 Gernika (Bizkaia)
 city:   Spain
