--- a/data/de/partner_tedisa.yml
+++ b/data/de/partner_tedisa.yml
@@ -4,7 +4,7 @@ title   : UNSERE PARTNERUNTERNEHMEN.
 subtitle: Zuverlässige Lieferanten auf die Sie zählen können
 url: http://www.tedisa-hirth.com/
 location: Anschrift
-description: Tedisa fertigt Hirth Ringe und Hirth Verzahnungen. Spezialist für hochpräzise Produkte. Ringdurchmesser bis 1500 mm sind möglich. Standardgrößen und Ringsätze nach Kundenwunsch in höchster Präzision.
+description: Tedisa fertigt Hirth Ringe und Hirth Verzahnungen nach individuellen Kundenwünschen an.  Sie sind spezialisiert auf hochpräzise Fertigung, die  Ringdurchmesser bis 1500 mm möglich macht. Sowohl Standardgrößen, die kurzfristig lieferbar sind, als auch Ringsätze nach Kundenwunsch mit höchster Präzision gefertigt zählen zu ihrem normalen Produktprogramm.
 address: Pol. Ind. Eitua, 56 
 address2: E48240 Berriz
 city: Bizkaia, Spain
