--- a/data/en/partner_tdg.yml
+++ b/data/en/partner_tdg.yml
@@ -5,7 +5,7 @@ subtitle: Reliable suppliers for almost every use case.
 logo: images/portfolio/portfolio-tdg.jpg
 url: https://tdgcompany.com/
 location: Address
-description: TDG manufacturers chucks according to customer requirements. The company is more than 100 years old with experience in machining. The are specialist in middle to larger sized Chucks; both manual and automatic. They have recently introduced Smart controls. They offer solutions up to 7 meters in diameter for the following sectors; energy, rail, shipbuilding, air and space.
+description: TDG manufactures Chucks according to customer requirements. The company is more than 100 years old with experience in machining. They are specialist in middle to larger sized Chucks; both manual and automatic. They have recently introduced Smart controls. They offer solutions up to 7 meters in diameter for the following sectors; energy, rail, shipbuilding, air and space.
 address: Goikoibarra 3
 address2: 48300 Gernika (Bizkaia)
 city:   Spain
