--- a/data/de/about.yml
+++ b/data/de/about.yml
@@ -4,11 +4,11 @@ item    :
     image : images/about/about-1.jpg
     title : Tradition und Expertise
     description : >
-      Unsere Lieferanten befinden sich in Nordspanien, sowohl in Katalonien als auch im Baskenland.  In diesen Regionen gehört es zur Tradition, einen besonderen Stolz für die eigene Arbeit und das Unternehmen zu besitzen. Diese Begeisterung zum eigenen Produkt, gepaart mit Flexibilität und Verlässlichkeit macht heute die besondere Stärke dieser Firmen aus und erhöht ihre Wettbewerbsfähigkeit für den deutschen Markt. 
+      Unsere Lieferanten befinden sich in Nordspanien, sowohl in Katalonien als auch im Baskenland.  In diesen Regionen gehört es zur Tradition, einen besonderen Stolz für die eigene Arbeit und das Unternehmen zu besitzen. Diese Begeisterung zum eigenen Produkt, gepaart mit Flexibilität und Verlässlichkeit macht heute die besondere Stärke dieser Firmen aus und erhöht ihre Wettbewerbsfähigkeit für den deutschen Markt.  
 
 
   - positionRight : true
     image : images/about/about-2.jpg
     title : Verlässlichkeit und Zusammenarbeit
     description : >
-      Wir arbeiten eng mit unseren Lieferanten und Kunden zusammen. Das ermöglicht eine kundenspezifische Lösungsfindung ohne Umwege. Wir unterstützen Sie bei Ihrem Vorhaben. 
+      Wir arbeiten eng mit unseren Lieferanten und Kunden zusammen. Das ermöglicht eine kundenspezifische Lösungsfindung ohne Umwege. Wir unterstützen Sie bei Ihrem Vorhaben. Die meisten unserer Partnerunternehmen blicken auf eine über 50- jährige Tradition zurück und ein Unternehmen kann sogar eine über 100 -jährige Firmengeschichte vorweisen.
