--- a/data/en/service.yml
+++ b/data/en/service.yml
@@ -1,7 +1,7 @@
 enable    : true
-topTitle  : A LIST OF SERVICES
-title     : Our Service.
-subtitle  : What sets us apart from the competition is our lifelong dedication to customer service.
+topTitle  : PRESENTING
+title     : OUR SERVICE.
+subtitle  : What sets us apart from the competition is our dedication to the customer.
 item      :
   - icon  : tf-ion-ios-copy-outline
     title : Branding
