--- a/data/de/partner_grindel.yml
+++ b/data/de/partner_grindel.yml
@@ -103,16 +103,16 @@ item4   :
 
   - title : 
     image : images/portfolio/portfolio-grindel21.jpg
-    category  : photography, development
+    category  : 
 
   - title :  
     image : images/portfolio/portfolio-grindel22.jpg
-    category  : photography
+    category  : 
 
   - title : 
     image : images/portfolio/portfolio-grindel5.jpg
-    category  : ios, design
+    category  : 
 
   - title : 
     image : images/portfolio/portfolio-grindel24.jpg
-    category  : photography, development
+    category  : 
