--- a/data/de/partner_grindel.yml
+++ b/data/de/partner_grindel.yml
@@ -90,8 +90,7 @@ item3   :
 
   - title : 
     image : images/portfolio/portfolio-grindel18.jpg
-    category  : photography, development
-
+    category  : 
 item4   :
   - title :  
     image : images/portfolio/portfolio-grindel19.jpg
