--- a/data/en/partner_spiroide.yml
+++ b/data/en/partner_spiroide.yml
@@ -24,18 +24,18 @@ item   :
 
   - title : 
     image : images/portfolio/portfolio-spiroide2.jpg
-    category  : ios, design
+    category  : 
 
   - title : 
     image : images/portfolio/portfolio-spiroide3.jpg
-    category  : photography, development
+    category  : 
 
   - title : 
     image : images/portfolio/portfolio-spiroide4.jpg
-    category  : photography, development
+    category  : 
 
   - title : 
     image : images/portfolio/portfolio-spiroide6.jpg
-    category  : photography, development
+    category  : 
 
   
